<resources>
    <string name="app_name">AndroidPtut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="menu_home">Home</string>
    <string name="menu_client">Client</string>
    <string name="menu_estimate">Devis</string>
    <string name="menu_intervention">Intervention</string>
    <string name="menu_order">Commande</string>

    <string name="button_phone_call_text">Appeler</string>
    <string name="button_email_send_text">Envoyer un email</string>
    <string name="button_get_estimates_text">Devis en cours</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nom</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_phone">0456789900</string>
    <string name="hint_email">jeanjean@gmail.com</string>

    <string name="parts_needed_text">Pièces nécessaires</string>
    <string name="client_text">Client:</string>
    <string name="button_estimate_validate_text">Valider</string>
    <string name="text_view_estimate_description_label">Description de l\'intervention</string>
    <string name="text_view_estimate_prixHT_label">Prix Hors taxes (€)</string>
    <string name="text_view_estimate_prixTTC_label">Prix Toutes taxes comprises (€)</string>

    <string name="part_naming_label">Nom</string>
    <string name="part_unit_price_label">Prix unitaire</string>
    <string name="part_quantity_label">Qte</string>
    <string name="part_HT_price">Prix HT</string>
    <string name="part_TTC_price">Prix TTC</string>



    <string name="adresse">Adresse :</string>
    <string name="defaultTextViewName">TextView</string>
    <string name="string_code_postal">Code Postal :</string>
    <string name="string_ville">Ville :</string>
    <string name="text_tel">Tel :</string>
    <string name="text_portable">Portable :</string>
    <string name="text_references_internet">Références Internet :</string>
    <string name="text_num_siret">N° Siret :</string>
    <string name="mail_entreprise">Mail :</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="name">Nom :</string>
    <string name="titleEntreprise">Paramètres Entreprise</string>
</resources>