<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.holcvart.androidptut.view.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_client"
        android:name="com.holcvart.androidptut.view.fragment.ClientFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_client" >
        <action
            android:id="@+id/action_nav_client_to_nav_client_details"
            app:destination="@id/nav_client_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_estimate"
        android:name="com.holcvart.androidptut.view.fragment.EstimateFragment"
        android:label="@string/menu_estimate"
        tools:layout="@layout/fragment_estimate" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.holcvart.androidptut.view.fragment.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/order_fragment" />
    <fragment
        android:id="@+id/nav_intervention"
        android:name="com.holcvart.androidptut.view.fragment.InterventionFragment"
        android:label="@string/menu_intervention"
        tools:layout="@layout/intervention_fragment" />
    <fragment
        android:id="@+id/nav_client_details"
        android:name="com.holcvart.androidptut.view.fragment.ClientDetailsFragment"
        android:label="fragment_client_details"
        tools:layout="@layout/fragment_client_details" >
        <action
            android:id="@+id/action_nav_client_details_to_nav_estimate"
            app:destination="@id/nav_estimate" />
    </fragment>
</navigation>