<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewSettingEntrepriseTitre"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/defaultTextViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewSettingEntrepriseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingEntrepriseTitre" />

    <EditText
        android:id="@+id/editTextEntrepriseSettingName"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewSettingEntrepriseName"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingEntrepriseTitre"
        android:autofillHints="Name"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewSettingEntrepriseAdresse"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/adresse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingEntrepriseName" />

    <EditText
        android:id="@+id/editTextSettingEntrepriseAdresse"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewSettingEntrepriseAdresse"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntrepriseSettingName"
        android:autofillHints="Adresse"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/string_code_postal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingEntrepriseAdresse" />

    <EditText
        android:id="@+id/editTextSettingEntrepriseCodePostal"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewCP"
        app:layout_constraintTop_toBottomOf="@+id/editTextSettingEntrepriseAdresse"
        android:autofillHints="Code Postal"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewVille"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/string_ville"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCP" />

    <EditText
        android:id="@+id/editTextSettingEntrepriseVille"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewVille"
        app:layout_constraintTop_toBottomOf="@+id/editTextSettingEntrepriseCodePostal"
        android:autofillHints="Ville"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_tel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVille" />


    <EditText
        android:id="@+id/editTextSettingEntrepriseTelephone"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewTelephone"
        app:layout_constraintTop_toBottomOf="@+id/editTextSettingEntrepriseVille"
        android:autofillHints="Téléphone"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewPortable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_portable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelephone" />

    <EditText
        android:id="@+id/editTextSettingEntreprisePortable"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewPortable"
        app:layout_constraintTop_toBottomOf="@+id/editTextSettingEntrepriseTelephone"
        android:autofillHints="Portable"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewSettingEntrepriseMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/mail_entreprise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPortable" />

    <EditText
        android:id="@+id/editTextSettingEntrepriseMail"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewSettingEntrepriseMail"
        app:layout_constraintTop_toBottomOf="@+id/editTextSettingEntreprisePortable"
        android:autofillHints="Mail"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/textViewSettingEntrepriseNumSiret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/text_num_siret"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingEntrepriseMail" />

    <EditText
        android:id="@+id/editTextSettingEntrepriseSiret"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewSettingEntrepriseNumSiret"
        app:layout_constraintTop_toBottomOf="@+id/editTextSettingEntrepriseMail"
        android:inputType="textEmailAddress"
        android:autofillHints="example@mail.fr"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonSettingEntrepriseSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/sauvegarder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSettingEntrepriseSiret" />

</androidx.constraintlayout.widget.ConstraintLayout>
